tests/reject/variableScopeCondIf.emojic
🏁 🍇
  🖍🆕 qo 🍬🔡
  🍊 qo  ➡️ q🍇
    😀 q❗️
  🍉
  😀 q❗️
🍉
